[gd_scene load_steps=9 format=3 uid="uid://7n7rvrvh56lh"]

[ext_resource type="Script" path="res://scripts/desertmap.gd" id="1_0h67d"]
[ext_resource type="TileSet" uid="uid://dyrq7h5i02yyh" path="res://scenes/grass_snow_tileset.tres" id="2_l5p6q"]
[ext_resource type="PackedScene" uid="uid://c8x0rcllec7w5" path="res://scenes/canvas_modulate.tscn" id="3_6oe48"]
[ext_resource type="PackedScene" uid="uid://b4mitotcubsj0" path="res://scenes/daynightcycle_ui.tscn" id="4_71oql"]
[ext_resource type="PackedScene" uid="uid://dt5avhnd2ms2x" path="res://inventory/hotbar.tscn" id="5_l0q2l"]
[ext_resource type="PackedScene" uid="uid://digw6jgcbqt8l" path="res://scenes/player.tscn" id="6_yqy6i"]
[ext_resource type="PackedScene" uid="uid://c30gdwt7ex008" path="res://scenes/snow_titan.tscn" id="7_058j7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xir27"]
size = Vector2(48, 31)

[node name="desertmap" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_0h67d")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = ExtResource("2_l5p6q")
format = 2
layer_0/name = "general terrain"
layer_0/tile_data = PackedInt32Array(11, 1769475, 34, 12, 1769475, 34, 13, 1769475, 34, 14, 1769475, 34, 15, 1769475, 34, 16, 1769475, 34, 17, 1769475, 34, 18, 1769475, 34, 19, 1769475, 34, 20, 1769475, 34, 21, 1769475, 34, 22, 1769475, 34, 23, 1769475, 34, 24, 1769475, 34, 25, 1769475, 34, 26, 1769475, 34, 27, 1769475, 34, 28, 1769475, 34, 29, 1769475, 34, 655360, 262145, 4, 786432, 2490371, 31, 851968, 2490371, 31, 917504, 2490371, 31, 983040, 2490371, 31, 1048576, 2490371, 31, 1048577, 2490371, 31, 1048578, 2490371, 31, 1048579, 2490371, 31, 1114112, 2490371, 31, 1114113, 2490371, 31, 1114114, 2490371, 31, 1114115, 2490371, 31, 1114116, 2490371, 31, 1114117, 2490371, 31, 1114118, 2490371, 31, 1114119, 2490371, 31, 1114120, 2490371, 31, 1114121, 2490371, 31, 1114122, 2490371, 31, 1114123, 1769475, 34, 1114124, 1769475, 34, 1114125, 1769475, 34, 1048580, 2490371, 31, 1048581, 2490371, 31, 1048582, 2490371, 31, 1048583, 2490371, 31, 1048584, 2490371, 31, 1048585, 2490371, 31, 1048586, 1769475, 34, 1048587, 1769475, 34, 1048588, 3407875, 37, 1048589, 1769475, 34, 65547, 2490371, 31, 131082, 2490371, 31, 131083, 1769475, 34, 196617, 2490371, 31, 196618, 2490371, 31, 196619, 1769475, 34, 262155, 1769475, 34, 262154, 2490371, 31, 589832, 2490371, 31, 655371, 2490371, 31, 655370, 2490371, 31, 655369, 2490371, 31, 655368, 2490371, 31, 655367, 2490371, 31, 655366, 2490371, 31, 655365, 2490371, 31, 720901, 2490371, 31, 720902, 2490371, 31, 786439, 2490371, 31, 786440, 2490371, 31, 786441, 1769475, 34, 786442, 1769475, 34, 720906, 2490371, 31, 720907, 2490371, 31, 720905, 2490371, 31, 720904, 2490371, 31, 720903, 2490371, 31, 786438, 2490371, 31, 786437, 2490371, 31, 786436, 2490371, 31, 786435, 2490371, 31, 786434, 2490371, 31, 786433, 2490371, 31, 851969, 2490371, 31, 917505, 2490371, 31, 983041, 2490371, 31, 983042, 2490371, 31, 917506, 2490371, 31, 851970, 2490371, 31, 983043, 2490371, 31, 917507, 2490371, 31, 917508, 2490371, 31, 851971, 2490371, 31, 851972, 2490371, 31, 851973, 2490371, 31, 851974, 2490371, 31, 851975, 2490371, 31, 851976, 2490371, 31, 851977, 1769475, 34, 851978, 1769475, 34, 786443, 1769475, 34, 851979, 1769475, 34, 917511, 2490371, 31, 917510, 2490371, 31, 917509, 2490371, 31, 983045, 2490371, 31, 983044, 2490371, 31, 983046, 2490371, 31, 983047, 2490371, 31, 983048, 2490371, 31, 917512, 2490371, 31, 917513, 1769475, 34, 917514, 1769475, 34, 983050, 1769475, 34, 983049, 1769475, 34, 917515, 1769475, 34, 655361, 262145, 4, 655362, 262145, 4, 655363, 262145, 4, 655364, 262145, 4, 720896, 262145, 4, 720897, 262145, 4, 720898, 262145, 4, 720899, 262145, 4, 720900, 262145, 4, 720908, 2490371, 31, 655372, 2490371, 31, 786445, 2490371, 31, 720909, 2490371, 31, 720910, 2490371, 31, 786446, 2490371, 31, 851982, 2490371, 31, 786447, 2490371, 31, 851983, 2490371, 31, 917519, 2490371, 31, 917520, 2490371, 31, 851984, 2490371, 31, 851985, 2490371, 31, 917521, 2490371, 31, 851987, 2490371, 31, 917522, 2490371, 31, 851986, 2490371, 31, 917523, 2490371, 31, 851988, 2490371, 31, 917524, 2490371, 31, 786452, 2490371, 31, 720917, 2490371, 31, 655382, 2490371, 31, 589847, 2490371, 31, 589848, 2490371, 31, 524312, 0, 4, 458777, 65536, 4, 393242, 65536, 4, 917525, 2490371, 31, 851989, 2490371, 31, 786453, 2490371, 31, 851990, 2490371, 31, 786454, 2490371, 31, 720918, 2490371, 31, 655383, 2490371, 31, 720919, 2490371, 31, 786455, 2490371, 31, 655384, 2490371, 31, 720920, 2490371, 31, 524313, 65536, 4, 589849, 65536, 4, 458778, 65536, 4, 524314, 65536, 4, 393243, 2490371, 31, 458779, 1769475, 34, 786444, 1769475, 34, 655373, 1769475, 34, 786449, 2490371, 31, 589846, 2490371, 31, 327706, 1769475, 34, 589850, 65536, 4, 917526, 2490371, 31, 983059, 1769475, 34, 983051, 1769475, 34, 983052, 1769475, 34, 983053, 1769475, 34, 851980, 1769475, 34, 851981, 1769475, 34, 917517, 1769475, 34, 917516, 1769475, 34, 917518, 2490371, 31, 983054, 1769475, 34, 1048590, 1769475, 34, 1114126, 1769475, 34, 983055, 1769475, 34, 1048591, 1769475, 34, 1114127, 1769475, 34, 65548, 1769475, 34, 131084, 1769475, 34, 196620, 1769475, 34, 262156, 1769475, 34, 327692, 1769475, 34, 393228, 1769475, 34, 458764, 1769475, 34, 524300, 1769475, 34, 589836, 1769475, 34, 589837, 1769475, 34, 589838, 1769475, 34, 655374, 1769475, 34, 524302, 1769475, 34, 524301, 1769475, 34, 458765, 1769475, 34, 262157, 1769475, 34, 196621, 1769475, 34, 131085, 1769475, 34, 65549, 1769475, 34, 327693, 1769475, 34, 393229, 1769475, 34, 393230, 1769475, 34, 458766, 1769475, 34, 327694, 1769475, 34, 262158, 1769475, 34, 196622, 1769475, 34, 131086, 1769475, 34, 65550, 1769475, 34, 65551, 1769475, 34, 65552, 1769475, 34, 65553, 1769475, 34, 65554, 1769475, 34, 65555, 1769475, 34, 65556, 3407875, 37, 65557, 3407875, 37, 65558, 1769475, 34, 65559, 1769475, 34, 65560, 1769475, 34, 65561, 1769475, 34, 65562, 1769475, 34, 65563, 1769475, 34, 131099, 1769475, 34, 196635, 1769475, 34, 262171, 1769475, 34, 262170, 1769475, 34, 196634, 1769475, 34, 131098, 1769475, 34, 131097, 1769475, 34, 131096, 1769475, 34, 131095, 1769475, 34, 131094, 1769475, 34, 131093, 1769475, 34, 131092, 1769475, 34, 131091, 1769475, 34, 131090, 1769475, 34, 131089, 1769475, 34, 131088, 1769475, 34, 131087, 1769475, 34, 196623, 1769475, 34, 262159, 1769475, 34, 262160, 1769475, 34, 262161, 1769475, 34, 262162, 1769475, 34, 196625, 1769475, 34, 196624, 1769475, 34, 196626, 1769475, 34, 196627, 1769475, 34, 196628, 1769475, 34, 196629, 1769475, 34, 196630, 1769475, 34, 196631, 1769475, 34, 196632, 1769475, 34, 196633, 1769475, 34, 262169, 1769475, 34, 262168, 1769475, 34, 262167, 1769475, 34, 262166, 1769475, 34, 262165, 1769475, 34, 262164, 1769475, 34, 262163, 1769475, 34, 327699, 3407875, 37, 327698, 1769475, 34, 327697, 1769475, 34, 327696, 1769475, 34, 327695, 1769475, 34, 393231, 1769475, 34, 393232, 1769475, 34, 393233, 1769475, 34, 393234, 1769475, 34, 393235, 1769475, 34, 393236, 1769475, 34, 327700, 3407875, 37, 327701, 1769475, 34, 327705, 1769475, 34, 327704, 1769475, 34, 327703, 1769475, 34, 327702, 1769475, 34, 393238, 1769475, 34, 393237, 1769475, 34, 393239, 1769475, 34, 393240, 1769475, 34, 393241, 65536, 4, 458776, 2490371, 31, 458775, 1769475, 34, 458774, 1769475, 34, 458773, 1769475, 34, 458772, 1769475, 34, 458771, 1769475, 34, 458770, 1769475, 34, 458769, 1769475, 34, 458768, 1769475, 34, 458767, 1769475, 34, 524303, 1769475, 34, 524304, 3407875, 37, 524305, 1769475, 34, 524306, 1769475, 34, 524307, 1769475, 34, 524309, 1769475, 34, 524310, 1769475, 34, 524311, 2490371, 31, 589845, 1769475, 34, 655381, 1769475, 34, 655380, 1769475, 34, 720916, 1769475, 34, 589844, 1769475, 34, 589843, 1769475, 34, 589842, 1769475, 34, 589841, 1769475, 34, 589840, 1769475, 34, 589839, 1769475, 34, 655375, 1769475, 34, 655376, 1769475, 34, 655377, 1769475, 34, 655378, 1769475, 34, 655379, 1769475, 34, 720915, 1769475, 34, 786451, 2490371, 31, 786450, 2490371, 31, 720914, 1769475, 34, 720913, 1769475, 34, 720912, 1769475, 34, 720911, 1769475, 34, 786448, 2490371, 31, 983056, 1769475, 34, 983057, 1769475, 34, 983058, 1769475, 34, 1048593, 1769475, 34, 1048592, 1769475, 34, 1048594, 1769475, 34, 1114128, 1769475, 34, 1114129, 1769475, 34, 1114130, 1769475, 34, 1114131, 1769475, 34, 1048595, 1769475, 34, 1048596, 1769475, 34, 983060, 1769475, 34, 983061, 1769475, 34, 983062, 1769475, 34, 1048598, 1769475, 34, 1048597, 1769475, 34, 1114132, 1769475, 34, 1114133, 1769475, 34, 1114134, 1769475, 34, 1114135, 1769475, 34, 1048599, 1769475, 34, 983063, 1769475, 34, 917527, 1769475, 34, 851991, 1769475, 34, 851992, 1769475, 34, 786456, 1769475, 34, 786457, 1769475, 34, 720921, 2490371, 31, 655385, 65536, 4, 655386, 65536, 4, 655387, 1769475, 34, 589851, 1769475, 34, 524315, 1769475, 34, 65564, 1769475, 34, 65565, 1769475, 34, 131101, 3407875, 37, 196637, 1769475, 34, 262173, 1769475, 34, 327709, 2490371, 31, 393245, 2490371, 31, 458781, 1769475, 34, 524317, 1769475, 34, 589853, 1769475, 34, 655389, 1769475, 34, 720925, 1769475, 34, 786461, 1769475, 34, 851997, 1769475, 34, 917533, 1769475, 34, 983069, 1769475, 34, 1048605, 1769475, 34, 1048604, 1769475, 34, 983068, 1769475, 34, 917532, 1769475, 34, 851996, 1769475, 34, 786460, 1769475, 34, 720924, 1769475, 34, 655388, 1769475, 34, 589852, 1769475, 34, 524316, 1769475, 34, 458780, 1769475, 34, 393244, 2490371, 31, 262172, 1769475, 34, 196636, 1769475, 34, 131100, 1769475, 34, 720922, 1769475, 34, 720923, 1769475, 34, 786458, 1769475, 34, 851993, 1769475, 34, 851994, 1769475, 34, 851995, 1769475, 34, 917531, 1769475, 34, 917530, 1769475, 34, 917529, 1769475, 34, 917528, 1769475, 34, 983064, 1769475, 34, 983065, 3407875, 37, 983066, 1769475, 34, 983067, 1769475, 34, 1048603, 1769475, 34, 1048602, 1769475, 34, 1048601, 1769475, 34, 1048600, 1769475, 34, 1114136, 1769475, 34, 1114137, 1769475, 34, 1114138, 1769475, 34, 1114139, 1769475, 34, 1114140, 1769475, 34, 1114141, 1769475, 34, 720894, 262145, 4, 917502, 2490371, 31, 851966, 2490371, 31, 786430, 262145, 4, 917503, 2490371, 31, 983039, 2490371, 31, 851967, 2490371, 31, 786431, 262145, 4, 720895, 262145, 4, 983038, 2490371, 31, 1048575, 2490371, 31, 1114111, 2490371, 31, 1179647, 2490371, 31, 1179646, 2490371, 31, 1048574, 2490371, 31, 1114110, 2490371, 31, 327710, 2490371, 31, 327711, 2490371, 31, 393247, 2490371, 31, 393246, 2490371, 31, 30, 1769475, 34, 31, 1769475, 34, 65566, 1769475, 34, 65567, 1769475, 34, 131103, 1769475, 34, 131102, 1769475, 34, 196638, 1769475, 34, 196639, 1769475, 34, 262175, 1769475, 34, 262174, 1769475, 34, 458782, 1769475, 34, 458783, 1769475, 34, 524318, 1769475, 34, 524319, 1769475, 34, 589854, 1769475, 34, 589855, 1769475, 34, 655391, 1769475, 34, 655390, 1769475, 34, 720926, 1769475, 34, 720927, 1769475, 34, 786462, 3407875, 37, 786459, 1769475, 34, 786463, 1769475, 34, 851999, 1769475, 34, 851998, 1769475, 34, 917534, 1769475, 34, 917535, 1769475, 34, 983071, 1769475, 34, 983070, 1769475, 34, 1048606, 1769475, 34, 1048607, 1769475, 34, 1114143, 1769475, 34, 1114142, 1769475, 34, 65535, 2490371, 31, 65534, 2490371, 31, 131070, 2490371, 31, 0, 2490371, 31, 1, 2490371, 31, 65537, 2490371, 31, 131073, 2490371, 31, 131072, 2490371, 31, 262143, 2490371, 31, 262142, 2490371, 31, 327678, 2490371, 31, 393214, 2490371, 31, 458750, 2490371, 31, 524286, 2490371, 31, 589822, 2490371, 31, 655358, 2490371, 31, 655359, 2490371, 31, 589823, 2490371, 31, 524287, 2490371, 31, 458751, 2490371, 31, 393215, 2490371, 31, 327679, 2490371, 31, 262144, 2490371, 31, 196608, 2490371, 31, 196609, 2490371, 31, 262145, 2490371, 31, 327681, 2490371, 31, 327680, 2490371, 31, 393216, 2490371, 31, 458752, 2490371, 31, 524288, 2490371, 31, 589824, 2490371, 31, 589825, 2490371, 31, 524289, 2490371, 31, 458753, 2490371, 31, 393217, 2490371, 31, 393218, 2490371, 31, 327682, 2490371, 31, 262146, 2490371, 31, 196610, 2490371, 31, 131074, 2490371, 31, 65538, 2490371, 31, 2, 2490371, 31, 3, 2490371, 31, 65539, 2490371, 31, 131075, 2490371, 31, 196611, 2490371, 31, 262147, 2490371, 31, 327683, 2490371, 31, 393219, 2490371, 31, 458755, 2490371, 31, 458754, 2490371, 31, 524290, 2490371, 31, 589826, 2490371, 31, 589827, 2490371, 31, 524291, 2490371, 31, 524292, 2490371, 31, 458756, 2490371, 31, 393220, 2490371, 31, 393221, 2490371, 31, 458757, 2490371, 31, 524293, 2490371, 31, 589829, 2490371, 31, 589828, 2490371, 31, 589830, 2490371, 31, 524294, 2490371, 31, 458758, 2490371, 31, 393222, 2490371, 31, 327686, 2490371, 31, 262150, 2490371, 31, 196614, 2490371, 31, 131078, 2490371, 31, 65542, 2490371, 31, 5, 2490371, 31, 4, 2490371, 31, 65540, 2490371, 31, 131076, 2490371, 31, 196612, 2490371, 31, 196613, 2490371, 31, 131077, 2490371, 31, 65541, 2490371, 31, 7, 2490371, 31, 65543, 2490371, 31, 131079, 2490371, 31, 196615, 2490371, 31, 262151, 2490371, 31, 327687, 2490371, 31, 393223, 2490371, 31, 458759, 2490371, 31, 524295, 2490371, 31, 589831, 2490371, 31, 524296, 2490371, 31, 458760, 2490371, 31, 393224, 2490371, 31, 327688, 2490371, 31, 262152, 2490371, 31, 196616, 2490371, 31, 131080, 2490371, 31, 65544, 2490371, 31, 8, 2490371, 31, 9, 2490371, 31, 65545, 2490371, 31, 131081, 2490371, 31, 65546, 2490371, 31, 10, 2490371, 31, 327689, 2490371, 31, 393225, 2490371, 31, 458761, 2490371, 31, 524297, 2490371, 31, 589833, 2490371, 31, 589834, 2490371, 31, 524298, 2490371, 31, 458762, 2490371, 31, 393226, 2490371, 31, 327690, 2490371, 31, 327691, 1769475, 34, 393227, 1769475, 34, 458763, 1769475, 34, 524299, 1769475, 34, 589835, 1769475, 34, 65536, 2490371, 31, 196606, 2490371, 31, 524308, 1769475, 34, 262148, 2490371, 31, 262149, 2490371, 31, 327685, 2490371, 31, 327684, 2490371, 31, 131071, 2490371, 31, 196607, 2490371, 31, 6, 2490371, 31, 262153, 2490371, 31, 327707, 2490371, 31, 327708, 2490371, 31)
layer_1/name = "fences"
layer_1/tile_data = PackedInt32Array(851966, 65538, 3, 851967, 131074, 3, 786432, 131074, 3, 786433, 131074, 3, 786434, 131074, 3, 786435, 131074, 3, 786436, 196610, 3, 655358, 65538, 3, 655359, 131074, 3, 589824, 131074, 3, 589825, 131074, 3, 589826, 131074, 3, 589827, 131074, 3, 589828, 196610, 3, 458776, 2, 2, 393240, 2, 1, 327704, 65538, 0, 327705, 131074, 3, 327706, 131074, 3, 327707, 196610, 0, 393243, 2, 1, 458779, 2, 1, 524315, 2, 1, 589851, 2, 1, 655387, 2, 1, 720923, 196610, 2, 720922, 131074, 3, 720921, 131074, 3, 720920, 65538, 2, 655384, 2, 1, 589848, 2, 0)
layer_2/name = "ysort"
layer_2/y_sort_enabled = true
layer_2/tile_data = PackedInt32Array(65545, 262144, 0, 2, 262144, 0, 851971, 262145, 2, 393230, 262144, 0, 131095, 262144, 0, 1048595, 262144, 0, -196597, 65539, 42, -196596, 131075, 42, -196595, 196611, 42, -196594, 262147, 42, -196593, 327683, 42, -196592, 393219, 42, -196591, 65539, 42, -196590, 131075, 42, -196589, 196611, 42, -196588, 262147, 42, -196587, 327683, 42, -196586, 393219, 42, -196585, 458755, 42, -196584, 524291, 42, -196583, 589827, 42, -196582, 655363, 42, -196581, 720899, 42, -196580, 786435, 42, -196579, 851971, 42, -196578, 917507, 42, -196577, 983043, 42, 524317, 262144, 0, 589842, 262144, 0, 393224, 0, 0, 786455, 0, 0, 720908, 131072, 2, 196627, 131072, 2, 65541, 131072, 2, 13, 131072, 2, 262144, 262144, 0, 655369, 262144, 0, 917532, 0, 0, 393233, 131072, 2, 262157, 131072, 2, 524295, 262145, 2, 131088, 262145, 2, 131097, 262145, 2, 851985, 262145, 2, 917516, 0, 0, 26, 262144, 0, 22, 131072, 2, 18, 0, 0, 196636, 262144, 0, 262148, 262144, 0, 458775, 262145, 0, 131084, 262144, 0, 393218, 262144, 0, 786438, 262144, 0, 917503, 262144, 0, 262164, 262144, 0, 786452, 262144, 0, 262149, 262145, 2, 458772, 262144, 0, 262154, 262144, 0, 589839, 0, 0, 458764, 262145, 2, 983043, 262144, 0, 983064, 131072, 2, 983056, 131072, 2)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-2, 1, -1, 159, -45, 159, -45, 191, -1, 190, -1, 289, 481, 288, 479, 110, 481, 107, 480, 80, 480, 80, 478, 2, 193, 0, 176, 2, 4, -1, 145, -15, 231, -12, 336, -15, 469, -12, 511, -1, 534, 47, 537, 111, 529, 196, 525, 283, 517, 313, 401, 321, -15, 300, -86, 186, -40, 111, -14, 38)

[node name="portal desert to snow" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="portal desert to snow"]
position = Vector2(-21, 175.5)
shape = SubResource("RectangleShape2D_xir27")

[node name="CanvasModulate" parent="." instance=ExtResource("3_6oe48")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DayNightCycleUI" parent="CanvasLayer" instance=ExtResource("4_71oql")]
anchor_right = 0.039
anchor_bottom = 0.038
offset_right = -0.880005
offset_bottom = -0.0400009
scale = Vector2(2, 2)

[node name="Hotbar" parent="CanvasLayer" instance=ExtResource("5_l0q2l")]
offset_left = -5.0
offset_top = 89.0
offset_right = 135.0
offset_bottom = 129.0
scale = Vector2(1.5, 1.5)

[node name="player" parent="." instance=ExtResource("6_yqy6i")]
position = Vector2(19, 180)

[node name="snow_titan" parent="." instance=ExtResource("7_058j7")]
position = Vector2(333, 143)
xp_value = 1000

[connection signal="body_entered" from="portal desert to snow" to="." method="_on_portal_desert_to_snow_body_entered"]
